--- a/index.html
+++ b/index.html
@@ -99,75 +99,158 @@
             const audioCtx = new AudioContext();
 
             const notes = [
-                { frequency: 440.00, duration: 0.5 },  // la (A4)
-                { frequency: 493.88, duration: 0.5 },  // si (B4)
-                { frequency: 554.37, duration: 0.5 },  // DO# (C#5)
-                { frequency: 659.25, duration: 0.5 },  // MI (E5)
-                { frequency: 659.25, duration: 0.5 },  // MI (E5)
-                { frequency: 587.33, duration: 0.5 },  // RE (D5)
-                { frequency: 554.37, duration: 0.5 },  // DO# (C#5)
-                { frequency: 493.88, duration: 0.5 },  // si (B4)
-                { frequency: 440.00, duration: 0.5 },  // la (A4)
-                { frequency: 493.88, duration: 0.5 },  // si (B4)
-                { frequency: 554.37, duration: 0.5 },  // DO# (C#5)
-                { frequency: 493.88, duration: 0.5 },  // si (B4)
-                { frequency: 493.88, duration: 0.5 },  // si (B4)
-                { frequency: 440.00, duration: 0.5 },  // la (A4)
-                { frequency: 493.88, duration: 0.5 },  // si (B4)
-                { frequency: 554.37, duration: 0.5 },  // DO# (C#5)
-                { frequency: 739.99, duration: 0.5 },  // fa# (F#5)
-                { frequency: 493.88, duration: 0.5 },  // si (B4)
-                { frequency: 440.00, duration: 0.5 },  // la (A4)
-                { frequency: 493.88, duration: 0.5 },  // si (B4)
-                { frequency: 554.37, duration: 0.5 },  // DO# (C#5)
-                { frequency: 493.88, duration: 0.5 },  // si (B4)
-                { frequency: 440.00, duration: 0.5 },  // la (A4)
-                { frequency: 493.88, duration: 0.5 },  // si (B4)
-                { frequency: 554.37, duration: 0.5 },  // DO# (C#5)
-                { frequency: 659.25, duration: 0.5 },  // MI (E5)
-                { frequency: 659.25, duration: 0.5 },  // MI (E5)
-                { frequency: 587.33, duration: 0.5 },  // RE (D5)
-                { frequency: 554.37, duration: 0.5 },  // DO# (C#5)
-                { frequency: 493.88, duration: 0.5 },  // si (B4)
-                { frequency: 440.00, duration: 0.5 },  // la (A4)
-                { frequency: 493.88, duration: 0.5 },  // si (B4)
-                { frequency: 554.37, duration: 0.5 },  // DO# (C#5)
-                { frequency: 493.88, duration: 0.5 },  // si (B4)
-                { frequency: 493.88, duration: 0.5 },  // si (B4)
-                { frequency: 440.00, duration: 0.5 },  // la (A4)
-                { frequency: 493.88, duration: 0.5 },  // si (B4)
-                { frequency: 554.37, duration: 0.5 },  // DO# (C#5)
-                { frequency: 739.99, duration: 0.5 },  // fa# (F#5)
-                { frequency: 493.88, duration: 0.5 },  // si (B4)
-                { frequency: 440.00, duration: 0.5 },  // la (A4)
-                { frequency: 493.88, duration: 0.5 },  // si (B4)
-                { frequency: 554.37, duration: 0.5 },  // DO# (C#5)
-                { frequency: 493.88, duration: 0.5 },  // si (B4)
-                { frequency: 261.63, duration: 0.5 },  // DO (C4)
-                { frequency: 293.66, duration: 0.5 },  // RE (D4)
-                { frequency: 329.63, duration: 0.5 },  // MI (E4)
-                { frequency: 392.00, duration: 0.5 },  // SOL (G4)
-                { frequency: 392.00, duration: 0.5 },  // SOL (G4)
-                { frequency: 349.23, duration: 0.5 },  // FA (F4)
-                { frequency: 329.63, duration: 0.5 },  // MI (E4)
-                { frequency: 293.66, duration: 0.5 },  // RE (D4)
-                { frequency: 261.63, duration: 0.5 },  // DO (C4)
-                { frequency: 293.66, duration: 0.5 },  // RE (D4)
-                { frequency: 329.63, duration: 0.5 },  // MI (E4)
-                { frequency: 293.66, duration: 0.5 },  // RE (D4)
-                { frequency: 293.66, duration: 0.5 },  // RE (D4)
-                { frequency: 261.63, duration: 0.5 },  // DO (C4)
-                { frequency: 293.66, duration: 0.5 },  // RE (D4)
-                { frequency: 329.63, duration: 0.5 },  // MI (E4)
-                { frequency: 440.00, duration: 0.5 },  // la (A4)
-                { frequency: 293.66, duration: 0.5 },  // RE (D4)
-                { frequency: 261.63, duration: 0.5 },  // DO (C4)
-                { frequency: 293.66, duration: 0.5 },  // RE (D4)
-                { frequency: 329.63, duration: 0.5 },  // MI (E4)
-                { frequency: 293.66, duration: 0.5 },  // RE (D4)
-                { frequency: 261.63, duration: 0.5 },  // DO (C4)
-                { frequency: 493.88, duration: 0.5 },  // si (B4)
-                { frequency: 440.00, duration: 0.5 }   // la (A4)
+                { frequency: 440.00, duration: 0.20 },  // la (A4)
+                { frequency: 493.88, duration: 0.20 },  //* si (B4)
+                { frequency: 554.37, duration: 0.40 },  //  DO# (C#5)
+                { frequency: 659.25, duration: 0.40 },  // MI (E5)
+                { frequency: 659.25, duration: 0.40 },  // MI (E5)
+                { frequency: 587.33, duration: 0.20 },  // RE (D5)
+                { frequency: 554.37, duration: 0.20 },  // DO# (C#5)
+                { frequency: 493.88, duration: 0.30 },  //* si (B4)
+                { frequency: 440.00, duration: 0.10 },  // la (A4)
+                { frequency: 493.88, duration: 0.20 },  // si (B4)
+                { frequency: 554.37, duration: 0.20 },  // DO# (C#5)
+                { frequency: 493.88, duration: 0.60 },  // si (B4)
+
+                { frequency: 554.37, duration: 0.20 },  // DO# (C#5)
+                { frequency: 493.88, duration: 0.30 },  //* si (B4)
+                { frequency: 440.00, duration: 0.10 },  // la (A4)
+                { frequency: 493.88, duration: 0.20 },  // si (B4)
+                { frequency: 554.37, duration: 0.20 },  // DO# (C#5)
+                { frequency: 370.88, duration: 0.60 },  // F#
+
+                { frequency: 554.37, duration: 0.20 },  // DO# (C#5)
+                { frequency: 493.88, duration: 0.30 },  //* si (B4)
+                { frequency: 440.00, duration: 0.10 },  // la (A4)
+                { frequency: 493.88, duration: 0.20 },  // si (B4)
+                { frequency: 554.37, duration: 0.20 },  // DO# (C#5)
+                { frequency: 493.88, duration: 0.40 },  // si (B4)
+
+                { frequency: 440.00, duration: 0.20 },  // la (A4)
+                { frequency: 493.88, duration: 0.20 },  //* si (B4)
+                { frequency: 554.37, duration: 0.40 },  //  DO# (C#5)
+                { frequency: 659.25, duration: 0.40 },  // MI (E5)
+                { frequency: 659.25, duration: 0.40 },  // MI (E5)
+                { frequency: 587.33, duration: 0.20 },  // RE (D5)
+                { frequency: 554.37, duration: 0.20 },  // DO# (C#5)
+                { frequency: 493.88, duration: 0.30 },  //* si (B4)
+                { frequency: 440.00, duration: 0.10 },  // la (A4)
+                { frequency: 493.88, duration: 0.20 },  // si (B4)
+                { frequency: 554.37, duration: 0.20 },  // DO# (C#5)
+                { frequency: 493.88, duration: 0.60 },  // si (B4)
+
+                { frequency: 554.37, duration: 0.20 },  // DO# (C#5)
+                { frequency: 493.88, duration: 0.30 },  //* si (B4)
+                { frequency: 440.00, duration: 0.10 },  // la (A4)
+                { frequency: 493.88, duration: 0.20 },  // si (B4)
+                { frequency: 554.37, duration: 0.20 },  // DO# (C#5)
+                { frequency: 370.88, duration: 0.60 },  // F#
+
+                { frequency: 554.37, duration: 0.20 },  // DO# (C#5)
+                { frequency: 493.88, duration: 0.30 },  //* si (B4)
+                { frequency: 440.00, duration: 0.10 },  // la (A4)
+                { frequency: 493.88, duration: 0.20 },  // si (B4)
+                { frequency: 554.37, duration: 0.20 },  // DO# (C#5)
+                { frequency: 493.88, duration: 0.40 },  // si (B4)
+
+                { frequency: 440.00, duration: 0.20 },  // la (A4)
+                { frequency: 493.88, duration: 0.20 },  // si (B4)
+                { frequency: 554.37, duration: 0.40 },  // DO# (C#5)
+                { frequency: 659.25, duration: 0.40 },  // MI (E5)
+                { frequency: 659.25, duration: 0.40 },  // MI (E5)
+                { frequency: 587.33, duration: 0.20 },  // RE (D5)
+                { frequency: 554.37, duration: 0.20 },  // DO# (C#5)
+                { frequency: 493.88, duration: 0.30 },  // si (B4)
+                { frequency: 440.00, duration: 0.10 },  // la (A4)
+                { frequency: 493.88, duration: 0.20 },  // si (B4)
+                { frequency: 554.37, duration: 0.20 },  // DO# (C#5)
+                { frequency: 493.88, duration: 0.60 },  // si (B4)
+                { frequency: 554.37, duration: 0.20 },  // DO# (C#5)
+                { frequency: 493.88, duration: 0.30 },  // si (B4)
+                { frequency: 440.00, duration: 0.10 },  // la (A4)
+                { frequency: 493.88, duration: 0.20 },  // si (B4)
+                { frequency: 554.37, duration: 0.20 },  // DO# (C#5)
+                { frequency: 370.88, duration: 0.60 },  // F#
+                { frequency: 554.37, duration: 0.20 },  // DO# (C#5)
+                { frequency: 493.88, duration: 0.30 },  // si (B4)
+                { frequency: 440.00, duration: 0.10 },  // la (A4)
+                { frequency: 493.88, duration: 0.20 },  // si (B4)
+                { frequency: 554.37, duration: 0.20 },  // DO# (C#5)
+                { frequency: 493.88, duration: 0.40 },  // si (B4)
+                { frequency: 440.00, duration: 0.20 },  // la (A4)
+                { frequency: 493.88, duration: 0.20 },  // si (B4)
+                { frequency: 554.37, duration: 0.40 },  // DO# (C#5)
+                { frequency: 659.25, duration: 0.40 },  // MI (E5)
+                { frequency: 659.25, duration: 0.40 },  // MI (E5)
+                { frequency: 587.33, duration: 0.20 },  // RE (D5)
+                { frequency: 554.37, duration: 0.20 },  // DO# (C#5)
+                { frequency: 493.88, duration: 0.30 },  // si (B4)
+                { frequency: 440.00, duration: 0.10 },  // la (A4)
+                { frequency: 493.88, duration: 0.20 },  // si (B4)
+                { frequency: 554.37, duration: 0.20 },  // DO# (C#5)
+                { frequency: 493.88, duration: 0.60 },  // si (B4)
+                { frequency: 554.37, duration: 0.20 },  // DO# (C#5)
+                { frequency: 493.88, duration: 0.30 },  // si (B4)
+                { frequency: 440.00, duration: 0.10 },  // la (A4)
+                { frequency: 493.88, duration: 0.20 },  // si (B4)
+                { frequency: 554.37, duration: 0.20 },  // DO# (C#5)
+                { frequency: 370.88, duration: 0.60 },  // F#
+                { frequency: 554.37, duration: 0.20 },  // DO# (C#5)
+                { frequency: 493.88, duration: 0.30 },  // si (B4)
+                { frequency: 440.00, duration: 0.10 },  // la (A4)
+                { frequency: 493.88, duration: 0.20 },  // si (B4)
+                { frequency: 554.37, duration: 0.20 },  // DO# (C#5)
+                { frequency: 493.88, duration: 0.40 },   // si (B4)
+                { frequency: 493.88, duration: 0.20 },  // si (B4)
+    { frequency: 554.37, duration: 0.20 },  // DO# (C#5)
+    { frequency: 622.25, duration: 0.40 },  // RE# (D#5)
+    { frequency: 739.99, duration: 0.40 },  // fa# (F#5)
+    { frequency: 739.99, duration: 0.40 },  // fa# (F#5)
+    { frequency: 659.25, duration: 0.20 },  // MI (E5)
+    { frequency: 622.25, duration: 0.20 },  // RE# (D#5)
+    { frequency: 554.37, duration: 0.30 },  // DO# (C#5)
+    { frequency: 493.88, duration: 0.10 },  // si (B4)
+    { frequency: 554.37, duration: 0.20 },  // DO# (C#5)
+    { frequency: 622.25, duration: 0.20 },  // RE# (D#5)
+    { frequency: 554.37, duration: 0.60 },  // DO# (C#5)
+    { frequency: 622.25, duration: 0.20 },  // RE# (D#5)
+    { frequency: 554.37, duration: 0.30 },  // DO# (C#5)
+    { frequency: 493.88, duration: 0.10 },  // si (B4)
+    { frequency: 554.37, duration: 0.20 },  // DO# (C#5)
+    { frequency: 622.25, duration: 0.20 },  // RE# (D#5)
+    { frequency: 415.30, duration: 0.60 },  // SOL# (G#4)
+    { frequency: 622.25, duration: 0.20 },  // RE# (D#5)
+    { frequency: 554.37, duration: 0.30 },  // DO# (C#5)
+    { frequency: 493.88, duration: 0.10 },  // si (B4)
+    { frequency: 554.37, duration: 0.20 },  // DO# (C#5)
+    { frequency: 622.25, duration: 0.20 },  // RE# (D#5)
+    { frequency: 554.37, duration: 0.40 },  // DO# (C#5)
+    { frequency: 493.88, duration: 0.20 },  // si (B4)
+    { frequency: 554.37, duration: 0.20 },  // DO# (C#5)
+    { frequency: 622.25, duration: 0.40 },  // RE# (D#5)
+    { frequency: 739.99, duration: 0.40 },  // fa# (F#5)
+    { frequency: 739.99, duration: 0.40 },  // fa# (F#5)
+    { frequency: 659.25, duration: 0.20 },  // MI (E5)
+    { frequency: 622.25, duration: 0.20 },  // RE# (D#5)
+    { frequency: 554.37, duration: 0.30 },  // DO# (C#5)
+    { frequency: 493.88, duration: 0.10 },  // si (B4)
+    { frequency: 554.37, duration: 0.20 },  // DO# (C#5)
+    { frequency: 622.25, duration: 0.20 },  // RE# (D#5)
+    { frequency: 554.37, duration: 0.60 },  // DO# (C#5)
+    { frequency: 622.25, duration: 0.20 },  // RE# (D#5)
+    { frequency: 554.37, duration: 0.30 },  // DO# (C#5)
+    { frequency: 493.88, duration: 0.10 },  // si (B4)
+    { frequency: 554.37, duration: 0.20 },  // DO# (C#5)
+    { frequency: 622.25, duration: 0.20 },  // RE# (D#5)
+    { frequency: 415.30, duration: 0.60 },  // SOL# (G#4)
+    { frequency: 622.25, duration: 0.20 },  // RE# (D#5)
+    { frequency: 554.37, duration: 0.30 },  // DO# (C#5)
+    { frequency: 493.88, duration: 0.10 },  // si (B4)
+    { frequency: 554.37, duration: 0.20 },  // DO# (C#5)
+    { frequency: 622.25, duration: 0.20 },  // RE# (D#5)
+    { frequency: 554.37, duration: 0.40 }   // DO# (C#5)
+
+                
             ];
 
             let currentTime = audioCtx.currentTime;
@@ -198,5 +281,3 @@
     </script>
 </body>
 </html>
-
-
