--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
         <br><br><br>
         <div class="coming-soon-text">More games coming soon, in the meantime see our concept tests below!</div>
         <div class="betafun-text">Betafun:</div>
+        <div><a class="button" href="https://shuamorg.github.io/cube/">Sound Cube</a></div>
+        <br><br><br>
         <div><a class="button" href="https://shuamorg.github.io/Duke/">The Adventures of Fox, Chicken and Frog</a></div>
         <br><br><br>
         <div><a class="button" href="https://shuamorg.github.io/circlebeep/">Circle Tap</a></div>
