--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@
         <div><a class="button" href="https://shuamorg.github.io/circlebeep/">Circle Tap</a></div>
         <br><br><br>
         <div><a class="button" href="https://shuamorg.github.io/theramin/">Theramin</a></div>
+                <br><br><br>
+        <div><a class="button" href="https://shuamorg.github.io/shuttle/">Shuttle</a></div>
     </div>
 
     <script>
