--- a/index.html
+++ b/index.html
@@ -123,7 +123,9 @@
         <br><br><br>
         <div class="coming-soon-text">More games coming soon, in the meantime see our concept tests below!</div>
         <div class="betafun-text">Betafun:</div>
-        <div><a class="button" href="https://shuamorg.github.io/shuttle/">Shuttle</a></div>
+        <div><a class="button" href="https://shuamorg.github.io/Spacewarp/">Space Warp</a></div>
+        <br><br><br>
+      <div><a class="button" href="https://shuamorg.github.io/shuttle/">Shuttle</a></div>
         <br><br><br>
         <div><a class="button" href="https://shuamorg.github.io/Duke/">The Adventures of Fox, Chicken and Frog</a></div>
         <br><br><br>
