--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     </div>
     <div class="container" id="game-container">
         <h1>Select a Game:</h1>
-        <div><a class="button" href="http://80.195.207.126/">Sassy Oil</a></div>
+        <div><a class="button" href="https://shuamorg.github.io/SassyOil/">Sassy Oil</a></div>
         <br><br><br>
         <div class="coming-soon-text">More games coming soon, in the meantime see our concept tests below!</div>
         <div class="betafun-text">Betafun:</div>
