--- a/index.html
+++ b/index.html
@@ -121,6 +121,10 @@
         <h1>Select a Game:</h1>
         <div><a class="button" href="https://shuamorg.github.io/SassyOil/">Sassy Oil</a></div>
         <br><br><br>
+              <div><a class="button" href="https://shuamorg.github.io/Spacewarp/">Warp Stones</a></div>
+        <br><br><br>
+              <div><a class="button" href="https://shuamorg.github.io/timeduel/">Time Duel</a></div>
+        <br><br><br>
         <div class="coming-soon-text">More games coming soon, in the meantime see our concept tests below!</div>
         <div class="betafun-text">Betafun:</div>
         <div><a class="button" href="https://shuamorg.github.io/Spacewarp/">Warp Stones</a></div>
