--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             box-sizing: border-box;
             background-color: lime;
             border-radius: 10px;
-            font-size: 1.5em;
+            font-size: 14px;
             font-family: 'Press Start 2P', cursive;
         }      
         .button:hover {
@@ -120,19 +120,21 @@
     <div class="container" id="game-container">
         <h1>Select a Game:</h1>
         <div><a class="button" href="https://shuamorg.github.io/SassyOil/">Sassy Oil</a></div>
-        <br><br><br>
+        <br><br>
               <div><a class="button" href="https://shuamorg.github.io/Spacewarp/">Warp Stones</a></div>
-        <br><br><br>
+        <br><br>
               <div><a class="button" href="https://shuamorg.github.io/timeduel/">Time Duel</a></div>
-        <br><br><br>
+        <br><br>
+                    <div><a class="button" href="https://shuamorg.github.io/tower/">Tower (PC Only)</a></div>
+        <br><br>
         <div class="coming-soon-text">More games coming soon, in the meantime see our concept tests below!</div>
         <div class="betafun-text">Betafun:</div>
       <div><a class="button" href="https://shuamorg.github.io/shuttle/">Shuttle</a></div>
-        <br><br><br>
+        <br><br>
         <div><a class="button" href="https://shuamorg.github.io/Duke/">The Adventures of Fox, Chicken and Frog</a></div>
-        <br><br><br>
+        <br><br>
         <div><a class="button" href="https://shuamorg.github.io/circlebeep/">Circle Tap</a></div>
-        <br><br><br>
+        <br><br>
         <div><a class="button" href="https://shuamorg.github.io/theramin/">Theramin</a></div>
     </div>
 
